--- a/views/home.templ
+++ b/views/home.templ
@@ -8,43 +8,87 @@ import (
 
 css box() {
 	display: flex;
+	width: 48%;
 	align-items: start;
 	margin-bottom: 20px;
+	padding: 30px;
+	background: #f5d5f5;
+}
+
+templ JobItem (job db.Job) {
+	<style scoped>
+		.job-position:has(input:checked) {
+			background: #b5a3d1;
+		}
+		.job-position:hover {
+			background: #cdaddb;
+		}
+	</style>
+	<div class={"job-position", box()}>
+		<input hx-patch={fmt.Sprintf("/job/%d/done", job.Id)} hx-action="change" type="checkbox" checked?={job.Done} />
+		<div>
+			{job.Name}
+			<div>
+				<a target="_blank" rel="nofollow" href={templ.URL(job.Url)}>Apply</a>
+			</div>
+			if job.DescriptionUrl.Valid {
+				<div>
+					<a target="_blank" rel="nofollow" href={templ.URL(job.DescriptionUrl.String)}>Read Description</a>
+				</div>
+			}
+			if job.Tags.Valid {
+				<ul>
+					for _, tag := range strings.Split(job.Tags.String, ",") {
+						<li>{tag}</li>
+					}
+				</ul>
+			}
+		</div>
+		<button hx-confirm="Are you sure you want to delete this position?" hx-target="closest .job-position" hx-swap="delete" hx-delete={fmt.Sprintf("/job/%d", job.Id)}>
+			Delete
+		</button>
+	</div>
 }
 
 templ Index(jobs []db.Job) {
-	<style>
-		.job-position:has(input:checked) {
-			background: #999;
-		}
-		.job-position:hover {
-			background: #BBB;
-		}
-	</style>
 	@Boilerplate() {
-		for _, job := range jobs {
-				<div class={"job-position", box()}>
-					<input hx-patch={fmt.Sprintf("/job/%d/done", job.Id)} hx-action="change" type="checkbox" checked?={job.Done} />
-					<div>
-						{job.Name}
-						<div>
-							<a target="_blank" rel="nofollow" href={templ.URL(job.Url)}>Apply</a>
-						</div>
-						if job.DescriptionUrl.Valid {
-							<div>
-								<a target="_blank" rel="nofollow" href={templ.URL(job.DescriptionUrl.String)}>Read Description</a>
-							</div>
-						}
-						if job.Tags.Valid {
-							<ul>
-								for _, tag := range strings.Split(job.Tags.String, ",") {
-									<li>{tag}</li>
-								}
-							</ul>
-						}
-					</div>
-				</div>
-		}
+		<style>
+			#jobs {
+				display: flex;
+				flex-wrap: wrap;
+				justify-content: space-around;
+			}
+		</style>
+		<form hx-post="/jobs" hx-target="#jobs" hx-target-error="#form-error" hx-swap="afterbegin">
+			<style scoped>
+				label {
+					display: block;
+				}
+			</style>
+			<div>
+				<label for="name">Position Name | Place</label>
+				<input id="name" name="name" type="text"/>
+			</div>
+			<div>
+				<label for="url">Apply URL/Email</label>
+				<input id="url" name="url" type="text"/>
+			</div>
+			<div>
+				<label for="description_url"> URL for the position's description AKA where I found it</label>
+				<input id="description_url" name="description_url" type="text"/>
+			</div>
+			<div>
+				<label for="tags">Tags</label>
+				<textarea id="tags" name="tags"></textarea>
+			</div>
+			<input type="submit" value="Save"/>
+		</form>
+		<div id="form-error"></div>
+		<div id="jobs">
+			for _, job := range jobs {
+				@JobItem(job)
+			}
+		</div>
 	}
 }
 
