--- a/views/home.templ
+++ b/views/home.templ
@@ -3,6 +3,7 @@ package views;
 import (
 	"strings"
 	"jobsearch/db"
+	"fmt"
 )
 
 css box() {
@@ -16,7 +17,7 @@ templ Index(jobs []db.Job) {
 		<div>
 		for _, job := range jobs {
 				<div class={box()}>
-					<input type="checkbox" checked?={job.Done} />
+					<input hx-patch={fmt.Sprintf("/job/%d", job.Id)} hx-action="change" type="checkbox" checked?={job.Done} />
 					<div>
 						{job.Name}
 						<div>
