--- a/views/boilerplate.templ
+++ b/views/boilerplate.templ
@@ -9,6 +9,9 @@ templ Boilerplate() {
 			<link href="https://fonts.googleapis.com/css2?family=Krub:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;1,200;1,300;1,400;1,500;1,600;1,700&family=Noto+Serif:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 			<style>
 				body {
+					font-family: Krub;
+					color: #685238;
+					font-size: 18px;
 					background: #FFF1E0;
 				}
 				html {
